# sqlmesh-gizmosql

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: wait-for-gizmosql.sh
sqlmesh_gizmosql/: __init__.py  adapter.py  connection.py
tests/: test_gizmosql.py
tests/integration/: conftest.py  test_integration_ducklake.py  test_integration_gizmosql.py
tests/integration/docker/: compose.gizmosql.yaml
